--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
 
           <div class="col-lg-6">
             <h3 class="resume-title">CONOSCENZE E COMPETENZE SVILUPPATE</h3><br>
-            <div class="resume-item">
+            <div class="resume-item">  
               <h4>Linguaggi e Tecnologie</h4>
-              <p>
+              <ul class="fa-ul mb-0">
               <strong>Ottime Conoscenze</strong><br>Java, Java Servlet, HTML, JSP<br>
               <strong>Buone Conoscenze</strong><br>MySQL, Springboot, Bootstrap, CSS<br>
               <strong>Medie Conoscenze</strong><br>Java EE, Javascript, C, Hibernate, Android Studio<br>
-                </p>
+              </ul>
            </div>
   
             <div class="resume-item">
