--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="description" content="Kevin Pacifico | Software Engineer | Sviluppatore  | Informatica">
+  <meta name="author" content="Kevin Pacifico | Kevin | Pacifico">
+  <meta name="keywords" content="kevin pacifico, kevin, pacifico, curriculum, unisa, informatica, triennale, dottore, programmatore, programmer, gamer, curriculum, sito, creatore di videogiochi, videogiochi, sviluppatore, game developer, unity, game,">
 
   <title>Kevin Pacifico</title>
   <meta content="" name="description">
@@ -261,39 +264,42 @@
                 reputo che l'organizzazione e la comunicazione sono fondamentali per ottimizzare i tempi e la qualità del lavoro prodotto.
               </p>
             </div>
+
+            <div class="resume-item">
+              <h4>Lingue</h4>
+              <ul> 
+                <li>Italiano(madrelingua)</li>
+                <li>Inglese(livello B1)</li>
+              </ul>
+            </div>
+
           </div>
 
           <div class="col-lg-6">
             <h3 class="resume-title">CONOSCENZE E COMPETENZE SVILUPPATE</h3><br>
             <div class="resume-item">  
-              <h4>Linguaggi e Tecnologie</h4>
-              <ul class="fa-ul mb-0">
-              <strong>Ottime Conoscenze</strong><br>Java, Java Servlet, HTML, JSP<br>
-              <strong>Buone Conoscenze</strong><br>MySQL, Springboot, Bootstrap, CSS<br>
-              <strong>Medie Conoscenze</strong><br>Java EE, Javascript, C, Hibernate, Android Studio<br>
-              </ul>
+              <h4>Linguaggi e Tecnologie</h4> 
+                <ul>
+                  <li><strong>Ottime Conoscenze</strong><br>Java, Java Servlet, HTML, JSP<br></li>
+                  <li><strong>Buone Conoscenze</strong><br>MySQL, Springboot, Bootstrap, CSS<br></li>
+                  <li><strong>Medie Conoscenze</strong><br>Java EE, Javascript, C, Hibernate, Android Studio<br></li>
+                </ul>
            </div>
   
             <div class="resume-item">
               <h4>Tipo di Sviluppo</h4>
-              <strong>Molta Esperienza</strong><br>Progettazione database<br>
-              <strong>Media Esperienza</strong><br>Sviluppo Web Application, Android<br>
+              <ul>
+                <li><strong>Molta Esperienza</strong><br>Progettazione database<br></li>
+                <li><strong>Media Esperienza</strong><br>Sviluppo Web Application, Android<br></li>
+              </ul>
             </div>
               
             <div class="resume-item">
                 <h4>Progettazione e Management</h4>
-                <p> 
-                  <strong>Strumenti di Management e Team Working</strong><br>
+                <ul> 
+                  <li><strong>Strumenti e Tecnologie di Management</strong><br></li>
                   Visual Paradigm, Github, Trello, Slack, Microsoft OneDrive, Discord, Balsamiq Mockups
-                </p>
-            </div>
-              
-            <div class="resume-item">
-              <h4>Lingue</h4>
-              <p> 
-                Italiano(madrelingua)<br>
-                Inglese(conoscenza base)
-              </p>
+                </ul>
             </div>
           </div>
         </div>
