--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta name="description" content="Kevin Pacifico | Software Engineer | Sviluppatore  | Informatica">
-  <meta name="author" content="Kevin Pacifico | Kevin | Pacifico">
+  <meta name="description" content="Kevin Pacifico | Software Engineer | Sviluppatore  | Informatica | Studente">
+  <meta name="author" content="Kevin Pacifico">
   <meta name="keywords" content="kevin pacifico, kevin, pacifico, curriculum, unisa, informatica, triennale, dottore, programmatore, programmer, gamer, curriculum, sito, creatore di videogiochi, videogiochi, sviluppatore, game developer, unity, game,">
 
   <title>Kevin Pacifico</title>
@@ -297,8 +297,8 @@
             <div class="resume-item">
                 <h4>Progettazione e Management</h4>
                 <ul> 
-                  <li><strong>Strumenti e Tecnologie di Management</strong><br></li>
-                  Visual Paradigm, Github, Trello, Slack, Microsoft OneDrive, Discord, Balsamiq Mockups
+                  <li><strong>Strumenti e Tecnologie di Management</strong><br>
+                  Visual Paradigm, Github, Trello, Slack, Microsoft OneDrive, Discord, Balsamiq Mockups</li>
                 </ul>
             </div>
           </div>
