Update Meta Contents

--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta name="description" content="Kevin Pacifico | Software Engineer | Sviluppatore  | Informatica | Studente">
-  <meta name="author" content="Kevin Pacifico">
-  <meta name="keywords" content="kevin pacifico, kevin, pacifico, curriculum, unisa, informatica, triennale, dottore, programmatore, programmer, gamer, curriculum, sito, creatore di videogiochi, videogiochi, sviluppatore, game developer, unity, game,">
 
   <title>Kevin Pacifico</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="description" content="Kevin Pacifico | Sviluppatore  | Informatico | Studente">
+  <meta name="author" content="Kevin Pacifico">
+  <meta name="keywords" content="kevin pacifico, kevin, pacifico, curriculum, unisa, informatica, triennale, dottore, programmatore, programmer, gamer, sito, creatore di videogiochi, videogiochi, sviluppatore, game developer, unity, game,">
 
   <!-- Pages Icon -->
   <link href="assets/img/kTitolo.png" rel="icon">
