--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
           
             <p>
               <b>L'Università mi ha permesso di sviluppare diverse skill:</b><br>
-              Conoscenze basilari dei linguaggi procedurali.<br>
-              Ottime conoscenze dei linguaggi object oriented.<br>
-              Buone conoscenze riguardanti lo sviluppo di un sito.<br>
+              Medie conoscenze dei linguaggi procedurali.<br>
+              Ottime conoscenze dei linguaggi Object Oriented.<br>
+              Buone conoscenze riguardanti lo sviluppo di un sito Web.<br>
               Buone conoscenze riguardanti la gestione di database.<br>
-              Discrete capacità logiche e di problem solving.<br>
-              Conoscenze basilari di lingua inglese.<br>
+              Buone capacità logiche e di problem solving.<br>
+              Lingua inglese di livello B1.<br>
 
             </p>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
@@ -103,6 +103,7 @@
               <p class="fst-italic">
                 2014 - 2019
               </p>
+              <p>Conoscenze basilari sui linguaggi di programmazione e sulle reti di calcolatori.</p>
             </div>
           </div>
           
@@ -132,9 +133,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">JavaEE <i class="val">40%</i></span>
+              <span class="skill">JavaEE <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -146,23 +147,23 @@
             </div>
 
             <div class="progress">
-              <span class="skill">SpringBoot Framework <i class="val">60%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-            <div class="progress">
-              <span class="skill">MySQL <i class="val">70%</i></span>
+              <span class="skill">SpringBoot Framework <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Javascript - JQuery <i class="val">20%</i></span>
+              <span class="skill">MySQL <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Javascript - JQuery <i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -178,38 +179,38 @@
             </div>
 
             <div class="progress">
-              <span class="skill">CSS 3 <i class="val">50%</i></span>
+              <span class="skill">CSS 3 <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">BootStrap <i class="val">50%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-
-
-            <div class="progress">
-              <span class="skill">Github <i class="val">60%</i></span>
+              <span class="skill">BootStrap <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
+
             <div class="progress">
-              <span class="skill">Slack <i class="val">90%</i></span>
+              <span class="skill">Github <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Trello <i class="val">90%</i></span>
+              <span class="skill">Slack <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Trello <i class="val">80%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -278,9 +279,9 @@
             <div class="resume-item">  
               <h4>Linguaggi e Tecnologie</h4> 
                 <ul>
-                  <li><strong>Ottime Conoscenze</strong><br>Java, Java Servlet, HTML, JSP<br></li>
-                  <li><strong>Buone Conoscenze</strong><br>MySQL, Springboot, Bootstrap, CSS<br></li>
-                  <li><strong>Medie Conoscenze</strong><br>Java EE, Javascript, C, Hibernate, Android Studio<br></li>
+                  <li><strong>Ottime Conoscenze</strong><br>Java, Java Servlet, HTML, Hibernate<br></li>
+                  <li><strong>Buone Conoscenze</strong><br>MySQL, Java EE, Springboot, Bootstrap, CSS<br></li>
+                  <li><strong>Medie Conoscenze</strong><br>Javascript, C, Android Studio<br></li>
                 </ul>
            </div>
   
@@ -320,12 +321,14 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box iconbox-red">
               <div class="icon">
+                <a href="https://github.com/CFerrara98/DigitalDonation">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                   <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,582.0697525312426C382.5290701553225,586.8405444964366,449.9789794690241,525.3245884688669,502.5850820975895,461.55621195738473C556.606425686781,396.0723002908107,615.8543463187945,314.28637112970534,586.6730223649479,234.56875336149918C558.9533121215079,158.8439757836574,454.9685369536778,164.00468322053177,381.49747125262974,130.76875717737553C312.15926192815925,99.40240125094834,248.97055460311594,18.661163978235184,179.8680185752513,50.54337015887873C110.5421016452524,82.52863877960104,119.82277516462835,180.83849132639028,109.12597500060166,256.43424936330496C100.08760227029461,320.3096726198365,92.17705696193138,384.0621239912766,124.79988738764834,439.7174275375508C164.83382741302287,508.01625554203684,220.96474134820875,577.5009287672846,300,582.0697525312426"></path>
                 </svg>
                 <i class="bx bx-donate-blood"></i>
+                </a>
               </div>
-              <h4><a href="">Digital Donation (In corso)</a></h4>
+              <h4><a href="https://github.com/CFerrara98/DigitalDonation">Digital Donation</a></h4>
               <p>Digital Donation è un sistema centralizzato sulla creazione di una piattaforma digitale che permette di 
                 semplificare e velocizzare la gestione delle donazioni rendendo più rapide le procedure di 
                 registrazione dei donatori e prevedendo un sistema più efficiente per l’organizzazione delle sedute.<br>
