--- a/index.html
+++ b/index.html
@@ -71,11 +71,14 @@
 
         <div class="section-title">
           <h2>Chi Sono</h2>
-          <p>Sono un ragazzo di 21 anni appassionato di informatica e videogiochi che adora
-            programmare ed imparare nuovi linguaggi e tecnologie di programmazione.<br>
-            Mi appassiona molto la creazione e lo sviluppo di siti web ed ultimamente sto approfondendo 
-            l'ambito degli sviluppi software.
-          </p>
+          <p>
+            Sono un ragazzo di 21 anni, studente di informatica ed adoro apprendere e sviluppare conoscenze riguardo le 
+            tecnologie di sviluppo e programmazione.
+            Nel tempo libero mi piace guardare video e leggere documentazione riguardanti framework e linguaggi di programmazione più moderni.
+            Mi piace lavorare in gruppo e conoscere nuove persone in modo da apprendere competenze su cui sono meno ferrato.
+            In futuro desidero trovare un'occupazione che rispecchi la mia passione. <br>
+          </p><br>
+          <a href="CurriculumVitae.pdf">Scarica il Curriculum Vitae aggiornato al 28/02/2022</a><br><br>
         </div>
 
         <div class="row">
@@ -161,9 +164,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Javascript - JQuery <i class="val">40%</i></span>
+              <span class="skill">Javascript - JSON<i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -186,7 +189,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">BootStrap <i class="val">60%</i></span>
+              <span class="skill">Bootstrap <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -194,23 +197,23 @@
 
 
             <div class="progress">
-              <span class="skill">Github <i class="val">80%</i></span>
+              <span class="skill">Nodejs <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Slack <i class="val">100%</i></span>
+              <span class="skill">React <i class="val">30%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Trello <i class="val">80%</i></span>
+              <span class="skill">Android Studio <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -227,8 +230,7 @@
 
         <div class="section-title">
           <h2>COMPETENZE</h2>
-          <p>In questa sezione sono presenti le competenze e le capacità che ho ottenuto tramite le esperienze avute nel mio percorso formativo 
-          </p>
+          <p>In questa sezione sono presenti le competenze e le capacità che ho ottenuto tramite le esperienze avute nel mio percorso formativo </p>
         </div>
 
         <div class="row">
@@ -335,12 +337,8 @@
                 Inoltre, il nuovo sistema è volto anche agli operatori delle sedi locali, in modo da alleggerire 
                 l’effort del personale interno che potrà così dedicarsi con maggiore impegno a mansioni più consone al proprio 
                 ruolo.
-                Il sistema è stato realizzato seguendo le procedure standard per lo sviluppo di un'applicazione software, diviso in vari documenti:<br>
-                • Requirement Analysis Document<br>
-                • System Design Document<br>
-                • System Test Suite e Test Case Specification<br>
-                • Object Design Document<br>
-                • Implementazione e Testing di Sistema<br>
+                La piattaforma è stata realizzata con il framework Springboot Java, HTML, CSS, Javascript e JSTL.
+                Nel link di riferimento è presente tutta la documentazione.
               </p>
             </div>
           </div>
@@ -360,8 +358,7 @@
                 Il sito è stato progettato ed implementato secondo architettura Model-View-Control.<br>
                 Le classi Model che rappresentano i bean, tramite un approccio Data-Source vanno ad interfacciarsi con il Database MySQL.<br>
                 Le classi Control realizzate con Java Servlet rappresentano la parte back-end del sito, qui vengono effettuati i controlli sulle operazioni effettuate dall'utente e tramite le classi Model si interagisce con la base dati.<br>
-                Infine la View rappresenta tutte le pagine che vengono mostrate a video all'utente e sono state realizzate con HTML, JSP e CSS.<BR>
-                Tutte le pagine del sito sono responsive.<br>
+                Infine la View rappresenta tutte le pagine che vengono mostrate a video all'utente e sono state realizzate con HTML, JSP e CSS, tutte le pagine del sito sono responsive.<br>
                 I controlli sui form sono stati realizzati con Javascript e JQuery, i controlli per l'operazione di registrazione di un nuovo utente sono stati realizzati tramite AJAX con codice JSON.  
             </div>
           </div>
@@ -432,7 +429,7 @@
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control input-name" name="name" placeholder="Nome e Cognome" required>
+                  <input type="text" class="form-control input-name" name="name" placeholder="Nome e Cognome" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
                   <input type="email" class="form-control input-email" name="email" placeholder="Email" required>
@@ -496,6 +493,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
+  
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
