--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
             Mi piace lavorare in gruppo e conoscere nuove persone in modo da apprendere competenze su cui sono meno ferrato.
             In futuro desidero trovare un'occupazione che rispecchi la mia passione. <br>
           </p><br>
-          <a href="CurriculumVitae.pdf">Scarica il Curriculum Vitae aggiornato al 28/02/2022</a><br><br>
+          <a href="CurriculumVitae.pdf">Scarica il Curriculum Vitae aggiornato al 09/03/2022</a><br><br>
         </div>
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/fotoprofilo.png" class="img-fluid" alt="">
+            <br><img src="assets/img/fotoprofilo.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Corso Laurea Triennale Informatica <br>Università degli studi di Salerno</h3>
@@ -472,8 +472,8 @@
         <a href="https://github.com/kevinpcf" class="github"><i class="bx bxl-github"></i></a>
       </div>
       <div class="copyright">
-        <h6>&copy; Copyright 2021</h6><br>
-        Il trattamento dei dati personali è svolto nel rispetto dei diritti sulla privacy in base alla legge n. 675 del 31 dicembre 1996
+        <h6> Kevin Pacifico, sito aggionato il 09/03/2022</h6><br>
+        Il trattamento dei dati personali è svolto nel rispetto dei diritti sulla privacy conforme alle prescrizioni del Regolamento Europeo n. 679/2016 e della normativa nazionale. 
       </div>
       <div class="credits">        
       </div>
