--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <br><img src="assets/img/fotoprofilo.png" class="img-fluid" alt="">
+            <br><img src="assets/img/fotoprofilo.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Corso Laurea Triennale Informatica <br>Università degli studi di Salerno</h3>
