Aggiornamento dati sito

--- a/index.html
+++ b/index.html
@@ -72,11 +72,8 @@
         <div class="section-title">
           <h2>Chi Sono</h2>
           <p>
-            Sono un ragazzo di 21 anni, studente di informatica ed adoro apprendere e sviluppare conoscenze riguardo le 
-            tecnologie di sviluppo e programmazione.
-            Nel tempo libero mi piace guardare video e leggere documentazione riguardanti framework e linguaggi di programmazione più moderni.
-            Mi piace lavorare in gruppo e conoscere nuove persone in modo da apprendere competenze su cui sono meno ferrato.
-            In futuro desidero trovare un'occupazione che rispecchi la mia passione. <br>
+            Sono uno studente triennale che desidera ardentemente approfondire le sue conoscenze nell'ambito informatico e che adora apprendere e sviluppare conoscenze sulle tecnologie di sviluppo e programmazione. Mi piace lavorare in gruppo e conoscere nuove persone affinchè possa confrontarmi su competenze in cui sono meno ferrato. 
+            <br>Per il mio futuro, desidero trovare un'occupazione che rispecchi la mia passione.
           </p><br>
           <a href="CurriculumVitae.pdf">Scarica il Curriculum Vitae aggiornato al 05/07/2022</a><br><br>
         </div>
@@ -92,14 +89,20 @@
             </p>
           
             <p>
-              <b>L'Università mi ha permesso di sviluppare diverse skill:</b><br>
-              Medie conoscenze dei linguaggi procedurali.<br>
-              Ottime conoscenze dei linguaggi Object Oriented.<br>
-              Buone conoscenze riguardanti lo sviluppo di un sito Web.<br>
-              Buone conoscenze riguardanti la gestione di database.<br>
-              Buone capacità logiche e di problem solving.<br>
-              Lingua inglese di livello B1.<br>
-
+              <b>L'Università mi ha permesso di acquisire le seguenti competenze:</b><br>
+              ✓ Buona preparazione con i linguaggi di programmazione procedurale utilizzati nei
+                primi anni di scuola e nei primi esami universitari;<br>
+              ✓ Largo utilizzo di linguaggi di programmazione orientati agli oggetti approfonditi in
+              contesto universitario;<br>
+              ✓ Conoscenza dei sistemi DBMS e dei principali linguaggi dichiarativi per la gestione
+              delle basi dati e di api per la gestione automatica di un database;<br>
+              ✓ Basi accademiche di sviluppo Enterprise;<br>
+              ✓ Sviluppo mobile per Android;<br>
+              ✓ Principali approcci di testing di unità, integrazione e sistema di un sistema;<br>
+              ✓ Conoscenze inerenti alle reti informatiche come la strutturazione del modello
+              ISO/OSI e dei principali protocolli di rete;<br>
+              ✓ Approcci di progettazione e sviluppo del software dall'originale metodo a cascata e
+              le sue evoluzioni e approcci Agile quali Scrum;
             </p>
             <div class="col-lg-8 pt-4 pt-lg-0 content">
               <h3>Diploma Liceo Scientifico Informatico G.B. Piranesi</h3>
@@ -204,9 +207,9 @@
             </div>
 
             <div class="progress">
-              <span class="skill">React <i class="val">30%</i></span>
+              <span class="skill">Unity3D <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
